Add keywords field to package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js"
   },
+  "keywords": [],
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
